[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/player/player_movement.gd" type="Script" id=1]
[ext_resource path="res://scripts/player/camera_rotation.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/fonts/open_sans/static/OpenSans/OpenSans-Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/textures/rope.png" type="Texture" id=4]
[ext_resource path="res://assets/models/scenes/grapplin.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/player/hook_visual.gd" type="Script" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.21, 0.4, 0.21 )

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 1, 1, 1, 0.607843 )

[sub_resource type="CubeMesh" id=3]
material = SubResource( 5 )
size = Vector3( 0.05, 0.05, 0.5 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.819905, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 1, 1, 1, 0.560784, 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=2]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="SpatialMaterial" id=7]
albedo_texture = ExtResource( 4 )
uv1_triplanar = true

[node name="player_standart" type="KinematicBody"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )
hook_momentum_time = 2.0

[node name="area_near" type="Area" parent="."]

[node name="trigger_zone" type="CollisionShape" parent="area_near"]
shape = SubResource( 1 )

[node name="collision_shape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0 )
script = ExtResource( 2 )

[node name="camera" type="Camera" parent="head"]
current = true

[node name="hook_ray" type="RayCast" parent="head/camera"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
enabled = true
cast_to = Vector3( 10, 0, 0 )

[node name="dash_particles" type="CPUParticles" parent="head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )
emitting = false
amount = 64
lifetime = 1.5
speed_scale = 2.0
lifetime_randomness = 1.0
mesh = SubResource( 3 )
emission_shape = 5
emission_ring_radius = 1.5
emission_ring_inner_radius = 0.2
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
direction = Vector3( 0, 0, -20 )
gravity = Vector3( 0, 0, -5 )
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 6 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="state_label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 512.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
text = "states: "
align = 1
valign = 1

[node name="state_label2" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -223.0
margin_top = 40.0
margin_right = 224.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 2 )
text = "current state: "
align = 1

[node name="dash_timer" type="Timer" parent="."]
one_shot = true

[node name="momentum_timer" type="Timer" parent="."]
one_shot = true

[node name="hook" type="Position3D" parent="."]

[node name="hook" type="CSGCylinder" parent="hook"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.5 )
visible = false
radius = 0.0557051
sides = 6
material = SubResource( 7 )
script = ExtResource( 6 )

[node name="grapplin" parent="hook/hook" instance=ExtResource( 5 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.5, 0 )

[connection signal="body_entered" from="area_near" to="." method="near_obj_detected"]
[connection signal="timeout" from="dash_timer" to="." method="dash_ended"]
[connection signal="timeout" from="momentum_timer" to="." method="momentum_timeout"]
